Refactor for cleanup and re-org of package structure